--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,9 @@
 .math-article {
     padding-left:1rem;
 }
+
+canvas.p5Canvas {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
