--- a/notes/css/style.css
+++ b/notes/css/style.css
@@ -25,6 +25,8 @@ body, h1, h2, h3, h4, h5 {
 
   footer {
     background-color: lightpink;
+    padding: 10px;
+    text-align: center;
     height: 4rem;
   }
 
@@ -36,6 +38,8 @@ body, h1, h2, h3, h4, h5 {
 
 .flex-container {
   display: flex;
+  margin-left: 10rem;
+  margin-right: 10rem;
   flex:1;
   background-color: white;
 }
